examples/v0.3/errors/constant_array_mutation.nova
/*
Expected Error

Cannot modify immutable collection.
*/

numbers:: [N] = [
    1,
    2,
    3
]

numbers[0] = 10